# modern_cpp_classes

./: README.md
examples/: a.out  image_class.cpp  move_semantic.cpp
homework_6/: CMakeLists.txt
homework_6/data/: lenna_test.pgm
homework_6/include/: homework_6.h  image_class.hpp
homework_6/src/: image_class.cpp  io_tools.cpp  main.cpp
